--- a/404.html
+++ b/404.html
@@ -123,7 +123,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://www.facebook.com/fastdotai" title="fastdotai"><svg class="svg-icon grey"><use xlink:href="/CompPhyWithPython/assets/minima-social-icons.svg#facebook"></use></svg></a></li><li><a rel="me" href="https://github.com/fastai" title="fastai"><svg class="svg-icon grey"><use xlink:href="/CompPhyWithPython/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/fastai" title="fastai"><svg class="svg-icon grey"><use xlink:href="/CompPhyWithPython/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
 </div>
 
   </div>
