--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
-<p><img src="/CompPhyWithPython/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p>#<img src="/CompPhyWithPython/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" />
+<img src="https://github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" alt="" />
+#<a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>#You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
 
 <h1 id="posts">Posts</h1>
 
