--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+Dr. Subir Sarkar
+<img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" >
 
-
-![](https://github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg)
 
