deploy: 7e2e415dfc22abe50fc641f04f4250f83027facb

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https://github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" alt="" /></p>
+        <div class="home"><p>Dr. Subir Sarkar
+<img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" /></p>
 
 
 
