--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ search_exclude: true
 image: images/logo.png
 ---
 Dr. Subir Sarkar
-<img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" >
+
+<body>
+      <img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" width="200"
+         height="80">
+   </body>
+
 
 
