deploy: 5e04c8560f0a0d2fe8bdfd64260672218d123279

--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Dr. Subir Sarkar
-<img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" /></p>
+        <div class="home"><p>Dr. Subir Sarkar</p>
+
+<body>
+      <img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" width="200" height="80" />
+   </body>
 
 
 
