--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 Dr. Subir Sarkar
 
 <body>
-      <img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" width="200"
+      <img src="https://github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.png" width="200"
          height="80">
    </body>
 
