deploy: 42c6063330746d1f0af1b66001db11b9a2402719

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ window.onload = wrap_img;
         <div class="home"><p>Dr. Subir Sarkar</p>
 
 <body>
-      <img src="github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.jpg" width="200" height="80" />
+      <img src="https://github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.png" width="200" height="80" />
    </body>
 
 
