--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+<meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
 Dr. Subir Sarkar
 
 <body>
