--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Dr. Subir Sarkar</p>
+        <div class="home"><meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
+
+<p>Dr. Subir Sarkar</p>
 
 <body>
       <img src="https://github.com/SubirSarkar2021/CompPhyWithPython/blob/master/images/mangalam.png" width="200" height="80" />
