--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@ search_exclude: true
 image: images/logo.png
 ---
 
+ Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
+to simulate any physical phenomena with a scope of better understanding of the system. In teaching learning process, 
+simulation and hence, computer coding plays a very significant role. One can do coding in any language. 
+But, Python happens to be the most easy tool as programming language for implementing coding. 
+Moreover, it is an open source software and can be worked from any platform. 
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+In this section, I shall share some of the coding which can be easily implemented with minimum knowledge of pogramming.
+This site is built with [fastpages](https://github.com/fastai/fastpages), 
 
 
 ![]({{site.baseurl}}/images/mangalam.png )
-
-#[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
-
-
-You can edit the `index.html` file to change this content.
 
 
  Posts
