--- a/index.html
+++ b/index.html
@@ -98,13 +98,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
+to simulate any physical phenomena with a scope of better understanding of the system. In teaching learning process, 
+simulation and hence, computer coding plays a very significant role. One can do coding in any language. 
+But, Python happens to be the most easy tool as programming language for implementing coding. 
+Moreover, it is an open source software and can be worked from any platform.</p>
+
+<p>In this section, I shall share some of the coding which can be easily implemented with minimum knowledge of pogramming.
+This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>,</p>
 
 <p><img src="/CompPhyWithPython/images/mangalam.png" alt="" /></p>
-
-<p>#<a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
 
 <p>Posts</p>
 
