--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ simulation and hence, computer coding plays a very significant role. One can do 
 But, Python happens to be the most easy tool as programming language for implementing coding. 
 Moreover, it is an open source software and can be worked from any platform.</p>
 
-<p>In this section, I shall share some of the coding which can be easily implemented with minimum knowledge of pogramming.
-This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>,</p>
+<p>In this section, I shall share some of the coding which can be easily implemented with minimum knowledge of pogramming.</p>
 
 <p><img src="/CompPhyWithPython/images/mangalam.png" alt="" /></p>
 
