--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-
- Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
+<html>
+  <head>
+   <meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
+  </head>
+</html>
+ 
+Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
 to simulate any physical phenomena with a scope of better understanding of the system. In teaching learning process, 
 simulation and hence, computer coding plays a very significant role. One can do coding in any language. 
 But, Python happens to be the most easy tool as programming language for implementing coding. 
