--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
+        <div class="home"><html>
+  <head>
+   <meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
+  </head>
+</html>
+
+<p>Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
 to simulate any physical phenomena with a scope of better understanding of the system. In teaching learning process, 
 simulation and hence, computer coding plays a very significant role. One can do coding in any language. 
 But, Python happens to be the most easy tool as programming language for implementing coding. 
