--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ In this section, I shall share some of the coding which can be easily implemente
 
 
 
-![]({{site.baseurl}}/images/eulerPic01.png )
+![]({{site.baseurl}}/images/eulerpic01.png )
 
 
  Posts
