deploy: 4b2620f4ec4a8b8f9572464c290625ecfe1ade3f

--- a/index.html
+++ b/index.html
@@ -98,13 +98,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><html>
-  <head>
-   <meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
-  </head>
-</html>
-
-<p>Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
+        <div class="home"><p>Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
 to simulate any physical phenomena with a scope of better understanding of the system. In teaching learning process, 
 simulation and hence, computer coding plays a very significant role. One can do coding in any language. 
 But, Python happens to be the most easy tool as programming language for implementing coding. 
@@ -112,7 +106,7 @@ Moreover, it is an open source software and can be worked from any platform.</p>
 
 <p>In this section, I shall share some of the coding which can be easily implemented with minimum knowledge of pogramming.</p>
 
-<p><img src="/CompPhyWithPython/images/eulerPic01.png" alt="" /></p>
+<p><img src="/CompPhyWithPython/images/eulerpic01.png" alt="" /></p>
 
 <p>Posts</p>
 
