--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+zAtt---
 layout: home
 search_exclude: true
 image: images/logo.png
@@ -15,7 +15,7 @@ In this section, I shall share some of the coding which can be easily implemente
 
 
 
-![]({{site.baseurl}}/images/eulerpic01.png )
+![]({{site.baseurl}}/images/LorentzAttractor.png )
 
 
  Posts
