--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ In this section, I shall share some of the coding which can be easily implemente
 
 
 
-#![]({{site.baseurl}}/images/lorentzAttractor.png )
+![]({{site.baseurl}}/images/mangalam.png )
 
 
  Posts
