--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-
- 
-Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
+<head>
+ My GitHub Blog
+</head>
+<meta name="google-site-verification" content="JIlytUM-eTSusiOkRkW_6kIwySXN0G-Q8fQU76sNCLU" />
+<body>
+ Computer coding is an essential requirement in any branch of science and technology. Knowledge of coding helps one 
 to simulate any physical phenomena with a scope of better understanding of the system. In teaching learning process, 
 simulation and hence, computer coding plays a very significant role. One can do coding in any language. 
 But, Python happens to be the most easy tool as programming language for implementing coding. 
@@ -19,6 +22,11 @@ In this section, I shall share some of the coding which can be easily implemente
 
 
  Posts
+ 
+ 
+</body>
+ 
+
 
 
 
